kubernetes/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: cronjob-manager
  name: cronjob-manager
  namespace: cronjob-manager
spec:
  ports:
    - name: cronjob-manager-vue
      port: 80
      protocol: TCP
      targetPort: 80
    - name: cronjob-manager-app
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    name: cronjob-manager
  type: ClusterIP

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    name: cronjob-manager
  name: cronjob-manager
  namespace: cronjob-manager
spec:
  rules:
    - host: cronjobs.example.com
      http:
        paths:
          - backend:
              serviceName: cronjob-manager
              servicePort: 8000
            path: /api
          - backend:
              serviceName: cronjob-manager
              servicePort: 80
            path: /
